Allow enabling of SSE CPUID flag via meson option

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,10 @@ if get_option('no_crlf')
     add_project_arguments('-DNO_CRLF', language: 'c')
 endif
 
+if get_option('enable_unstable_sse')
+    add_project_arguments('-DENABLE_UNSTABLE_SSE=1', language: 'c')
+endif
+
 add_project_arguments('-Wno-switch', language: 'c')
 
 includes = [include_directories('.')]
